@@ -869,6 +869,9 @@
         name = "Fredrik Wikstrom (salass00)"
     [/entry]
     [entry]
+        name = "Guillermo Biset (billynux)"
+    [/entry]
+    [entry]
         name = "Hans-Joachim Gurt (HaJo)"
     [/entry]
     [entry]
