@@ -54,6 +54,7 @@ Version 1.9.0-svn:
    * Added a way to compile wesnoth on windows by using CMake + MSVC9.
    * Fixed the ping timeout not waiting for the default ping interval when
      ping timeout is not set to 0
+   * Fixed a bug in scoring of AI recall list. Patch by billynux.
  * Terrain animation related
    * animated terrain animations are not synchronized anymore
    * reworked macros to handle animations
